--- a/ghi/src/App.css
+++ b/ghi/src/App.css
@@ -1,20 +1,12 @@
-/* Original CSS */
-/* .App {
-	text-align: center;
+html,
+body {
+	height: 100%;
+	width: 100%;
+}
+body {
+	display: flex;
 }
 
-.App-header {
-	background-color: #282c34;
-	min-height: 100vh;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	font-size: calc(10px + 2vmin);
-	color: white;
-} */
-
-/* Shaun Messing With CSS */
 .App {
 	text-align: center;
 	background: linear-gradient(90deg, #22c55e 0%, #60a5fa 100%);
@@ -32,7 +24,12 @@
 }
 
 .bg {
-	background-image: linear-gradient(45deg, #028090, #f0f3bd, #02c39a, #00a896);
+	height: 100vh;
+	width: 100vw;
+	background-image: url("./static/background-2.png");
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 
 .shake {
@@ -60,6 +57,15 @@
 	}
 }
 
-.goback:hover {
-	background-color: #00a896;
+.detailCard {
+	background-color: rgba(255, 255, 255, 0.13);
+	position: relative;
+	transform: translate(-50%, -50%);
+	top: 40vh;
+	left: 45vw;
+	border-radius: 10px;
+	backdrop-filter: blur(10px);
+	border: 2px solid rgba(255, 255, 255, 0.1);
+	box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
+	padding: 50px 35px;
 }
