--- a/ghi/src/index.css
+++ b/ghi/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url(https://fonts.googleapis.com/css?family=Raleway:100,200,300,regular,500,600,700,800,900);
+
+@import url(https://fonts.googleapis.com/css?family=Lato:100&effect=neon);
+
+@import url(https://fonts.googleapis.com/css?family=Oswald:200);
+
+@import url(https://fonts.googleapis.com/css?family=Megrim:regular);
