--- a/ghi/src/App.css
+++ b/ghi/src/App.css
@@ -2,14 +2,15 @@ html,
 body {
 	height: 100%;
 	width: 100%;
+	max-width: 100%;
 	cursor: url("./static/vibe-check-cursor-white.png"), auto;
 }
 body {
 	display: flex;
+	overflow-x: hidden;
 }
 
 .bg {
-	width: 100vw;
 	background-image: url("./static/background-2.png");
 	background-position: center;
 	background-repeat: no-repeat;
